; ModuleID = '/home/carl/AnghaBench/libgit2/tests/revwalk/extr_hidecb.c_test_revwalk_hidecb__hide_none_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/revwalk/extr_hidecb.c_test_revwalk_hidecb__hide_none_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_repo = common dso_local global i32 0, align 4
@hide_none_cb = common dso_local global i32 0, align 4
@_head_id = common dso_local global i32 0, align 4
@GIT_ITEROVER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_revwalk_hidecb__hide_none_cb() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = load i32, i32* @_repo, align 4
  %6 = call i32 @git_revwalk_new(i32** %1, i32 %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32*, i32** %1, align 8
  %9 = load i32, i32* @hide_none_cb, align 4
  %10 = call i32 @git_revwalk_add_hide_cb(i32* %8, i32 %9, i32* null)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @git_revwalk_push(i32* %12, i32* @_head_id)
  %14 = call i32 @cl_git_pass(i32 %13)
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %19, %0
  %16 = load i32*, i32** %1, align 8
  %17 = call i32 @git_revwalk_next(i32* %4, i32* %16)
  store i32 %17, i32* %3, align 4
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load i32, i32* %2, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %2, align 4
  br label %15

22:                                               ; preds = %15
  %23 = load i32, i32* %2, align 4
  %24 = call i32 @cl_assert_equal_i(i32 %23, i32 6)
  %25 = load i32, i32* %3, align 4
  %26 = load i32, i32* @GIT_ITEROVER, align 4
  %27 = call i32 @cl_assert_equal_i(i32 %25, i32 %26)
  %28 = load i32*, i32** %1, align 8
  %29 = call i32 @git_revwalk_free(i32* %28)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_revwalk_new(i32**, i32) #1

declare dso_local i32 @git_revwalk_add_hide_cb(i32*, i32, i32*) #1

declare dso_local i32 @git_revwalk_push(i32*, i32*) #1

declare dso_local i32 @git_revwalk_next(i32*, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_revwalk_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
